[gd_scene load_steps=27 format=3 uid="uid://7nodsdgru6nd"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_wg176"]
[ext_resource type="Texture2D" uid="uid://cdiq2xm0g2my4" path="res://Assets/heart_full.png" id="2_od42e"]
[ext_resource type="Texture2D" uid="uid://4n1ycpv03a0c" path="res://Assets/heart_empty.png" id="3_su6do"]
[ext_resource type="Texture2D" uid="uid://cbt6imlm2cqi5" path="res://Assets/coin_def.png" id="4_uwu2c"]
[ext_resource type="AudioStream" uid="uid://dacvmagwdvmxl" path="res://Assets/powerUp.wav" id="5_sgnik"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uf368"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74vkr"]
bg_color = Color(0, 0.607843, 1, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mw50u"]
bg_color = Color(0, 1, 0.678431, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.305882, 0.192157, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5f0yk"]
load_path = "res://.godot/imported/heart_full.png-4c9f4565bee3d30c7172028515ed9c4e.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6tgp3"]
load_path = "res://.godot/imported/heart_full.png-4c9f4565bee3d30c7172028515ed9c4e.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vq63e"]
load_path = "res://.godot/imported/heart_full.png-4c9f4565bee3d30c7172028515ed9c4e.ctex"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o0vdb"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kmtcy"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_koeyk"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oa1e7"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6irmi"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yk3yq"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8av36"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7d70j"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdtc8"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ob0jt"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hr8ci"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfm5x"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tawxy"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbq58"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpntl"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wg176")
heart_full = ExtResource("2_od42e")
heart_empty = ExtResource("3_su6do")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainerProgress" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainerProgress"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_uf368")
theme_override_styles/fill = SubResource("StyleBoxFlat_74vkr")
max_value = 120.0
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/MarginContainerProgress/ProgressBar"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/MarginContainerProgress/ProgressBar"]
layout_mode = 0
offset_left = 8.0
offset_top = -32.0
offset_right = 264.0
offset_bottom = 16.0
scale = Vector2(0.65, 0.65)
theme_override_font_sizes/font_size = 36
text = "AIR"
vertical_alignment = 2

[node name="MarginContainerMLabel" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32

[node name="MLabel" type="Label" parent="CanvasLayer/MarginContainerMLabel"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "100m"
vertical_alignment = 1

[node name="MarginContainerCoinLabel" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_bottom = 90.0
grow_horizontal = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16

[node name="CoinLabel" type="Label" parent="CanvasLayer/MarginContainerCoinLabel"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainerCoinLabel/CoinLabel"]
position = Vector2(-32, 32)
scale = Vector2(4.5, 4.5)
texture = ExtResource("4_uwu2c")

[node name="MarginContainerHealth" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -96.0
offset_right = 232.0
grow_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_bottom = 32

[node name="VFlowContainer" type="VFlowContainer" parent="CanvasLayer/MarginContainerHealth"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MarginContainerHealth/VFlowContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_od42e")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/MarginContainerHealth/VFlowContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_od42e")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/MarginContainerHealth/VFlowContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_od42e")
expand_mode = 1

[node name="UpgradeScreen" type="ColorRect" parent="CanvasLayer"]
process_mode = 3
visible = false
offset_right = 648.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.392157)

[node name="MarginContainerButtons" type="MarginContainer" parent="CanvasLayer/UpgradeScreen"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -128.0
offset_right = 648.0
offset_bottom = 128.0
grow_vertical = 2
theme_override_constants/margin_left = 112

[node name="VFlowContainer" type="VFlowContainer" parent="CanvasLayer/UpgradeScreen/MarginContainerButtons"]
layout_mode = 2
theme_override_constants/h_separation = 16

[node name="option1" type="Button" parent="CanvasLayer/UpgradeScreen/MarginContainerButtons/VFlowContainer"]
custom_minimum_size = Vector2(128, 256)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/hover = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/focus = SubResource("StyleBoxFlat_mw50u")
text = "option 1"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/UpgradeScreen/MarginContainerButtons/VFlowContainer/option1"]
position = Vector2(62, 49)
scale = Vector2(2.6875, 2.6875)
texture = SubResource("CompressedTexture2D_5f0yk")

[node name="option2" type="Button" parent="CanvasLayer/UpgradeScreen/MarginContainerButtons/VFlowContainer"]
custom_minimum_size = Vector2(128, 256)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/hover = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/focus = SubResource("StyleBoxFlat_mw50u")
text = "option 2"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/UpgradeScreen/MarginContainerButtons/VFlowContainer/option2"]
position = Vector2(62, 49)
scale = Vector2(2.6875, 2.6875)
texture = SubResource("CompressedTexture2D_6tgp3")

[node name="option3" type="Button" parent="CanvasLayer/UpgradeScreen/MarginContainerButtons/VFlowContainer"]
custom_minimum_size = Vector2(128, 256)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/hover = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_mw50u")
theme_override_styles/focus = SubResource("StyleBoxFlat_mw50u")
text = "option 3"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/UpgradeScreen/MarginContainerButtons/VFlowContainer/option3"]
position = Vector2(62, 49)
scale = Vector2(2.6875, 2.6875)
texture = SubResource("CompressedTexture2D_vq63e")

[node name="MarginContainerLabel" type="MarginContainer" parent="CanvasLayer/UpgradeScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_right = 175.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_constants/margin_top = 112

[node name="Label" type="Label" parent="CanvasLayer/UpgradeScreen/MarginContainerLabel"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Choose an Upgrade!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UpgradeScreen"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 128

[node name="skipbutton" type="Button" parent="CanvasLayer/UpgradeScreen/MarginContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_o0vdb")
theme_override_styles/hover = SubResource("StyleBoxFlat_kmtcy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_koeyk")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oa1e7")
theme_override_styles/focus = SubResource("StyleBoxFlat_6irmi")
text = "Skip for this one"

[node name="PauseMenu" type="ColorRect" parent="CanvasLayer"]
process_mode = 3
visible = false
offset_right = 648.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.5
offset_right = 131.5
offset_bottom = 55.0
grow_horizontal = 2
theme_override_constants/margin_top = 176

[node name="Label" type="Label" parent="CanvasLayer/PauseMenu/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.5
offset_right = 131.5
offset_bottom = 55.0
grow_horizontal = 2
theme_override_constants/margin_top = 272

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasLayer/PauseMenu/MarginContainer2"]
layout_mode = 2
theme_override_constants/v_separation = 24

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu/MarginContainer2/HFlowContainer"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_yk3yq")
theme_override_styles/hover = SubResource("StyleBoxFlat_8av36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7d70j")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rdtc8")
theme_override_styles/focus = SubResource("StyleBoxFlat_ob0jt")
text = "Resume"

[node name="BackToMenu" type="Button" parent="CanvasLayer/PauseMenu/MarginContainer2/HFlowContainer"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_yk3yq")
theme_override_styles/hover = SubResource("StyleBoxFlat_8av36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7d70j")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rdtc8")
theme_override_styles/focus = SubResource("StyleBoxFlat_ob0jt")
text = "Back To Menu"

[node name="GameOver" type="ColorRect" parent="CanvasLayer"]
process_mode = 3
visible = false
offset_right = 648.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.392157)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.0
offset_top = 15.0
offset_right = 174.0
offset_bottom = 279.0
grow_horizontal = 2
theme_override_constants/margin_top = 176

[node name="Label" type="Label" parent="CanvasLayer/GameOver/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.0
offset_top = 86.0
offset_right = 174.0
offset_bottom = 350.0
grow_horizontal = 2
theme_override_constants/margin_top = 176

[node name="Label" type="Label" parent="CanvasLayer/GameOver/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Depth: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.5
offset_top = 85.0
offset_right = 131.5
offset_bottom = 405.0
grow_horizontal = 2
theme_override_constants/margin_top = 272

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasLayer/GameOver/MarginContainer2"]
layout_mode = 2
theme_override_constants/v_separation = 24

[node name="PlayAgain" type="Button" parent="CanvasLayer/GameOver/MarginContainer2/HFlowContainer"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_hr8ci")
theme_override_styles/hover = SubResource("StyleBoxFlat_sfm5x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tawxy")
theme_override_styles/disabled = SubResource("StyleBoxFlat_lbq58")
theme_override_styles/focus = SubResource("StyleBoxFlat_dpntl")
text = "Play Again"

[node name="BackToMenu2" type="Button" parent="CanvasLayer/GameOver/MarginContainer2/HFlowContainer"]
custom_minimum_size = Vector2(256, 48)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_yk3yq")
theme_override_styles/hover = SubResource("StyleBoxFlat_8av36")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7d70j")
theme_override_styles/disabled = SubResource("StyleBoxFlat_rdtc8")
theme_override_styles/focus = SubResource("StyleBoxFlat_ob0jt")
text = "Back To Menu"

[node name="Upg" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sgnik")

[connection signal="pressed" from="CanvasLayer/UpgradeScreen/MarginContainer/skipbutton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer2/HFlowContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MarginContainer2/HFlowContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOver/MarginContainer2/HFlowContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOver/MarginContainer2/HFlowContainer/BackToMenu2" to="." method="_on_back_to_menu_pressed"]
